<resources>
    <string name="app_name">BF4Stats</string>

    <string name="greeting">Ultimative BF4Stats 5.000!</string>

    <string name="action_settings">Einstellungen</string>
    <string name="action_articles">News</string>
    <string name="action_compare">Vergleich</string>

    <string name="btn_GoText">Vergleichen!</string>
    <string name="action_search">test</string>
    <string name="search_title">Suche</string>
    <string name="title_activity_search_soldiers">SearchSoldiersActivity</string>


    <string name="lblName">Player Name</string>
    <string name="lblTag">Clan</string>
    <string name="lblScore">SCORE</string>
    <string name="lblRankNr">RANK</string>
    <string name="lblRankName">Rank</string>
    <string name="lblSkill">SKILL</string>
    <string name="lblKills">KILLS</string>
    <string name="lblHeadshots">HEADSHOTS</string>
    <string name="lblDeaths">DEATHS</string>
    <string name="lblKillStreak">KILLSTREAK</string>
    <string name="lblKDR">K/D</string>
    <string name="lblWLR">W/L</string>
    <string name="lblSPM">SPM</string>
    <string name="lblKPM">KPM</string>
    <string name="lblTime">TIME</string>


    <string name="hello_world">Hello world!</string>
    <string name="btn_Go">Go!</string>

    //Card Titles
    <string name="stats">STATS</string>
    <string name="title_activity_articles">Battlefield News</string>
    <string name="title_activity_single_article">Artikel</string>
    <string name="title_activity_new">Artikel</string>
    <string name="title_activity_deals">Sonderangebote</string>
    <string name="title_activity_comparison">Soldaten Vergleich</string>
    <string name="News">News</string>
    <string name="Deals">Deals</string>
    <string name="newsTitle">Hier der News Title</string>
    <string name="rssSource">www.battlefield-4.net</string>
    <string name="articleTitle">Artikel Titel</string>


    <string name="artitleText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>


</resources>
