<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/comparison"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_compare"/>
    <item
        android:id="@+id/articles"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_articles"/>
    <item
        android:id="@+id/single"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="single"/>
</menu>
