<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingTop="@dimen/margin_small"
        android:text="@string/rssSource"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="fill_parent"
        android:layout_height="0.3dp"
        android:layout_below="@+id/textView"
        android:background="@color/grey_black_1000"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:id="@+id/cvPlayerInfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/myrect"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_small"
                    tools:context=".LinearLayout">

                    <ImageView
                        android:id="@+id/singleArticleImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/win" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvPlayerStats"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cvPlayerInfo"
                android:background="@drawable/myrect"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <RelativeLayout
                        android:id="@+id/heading_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="-8dp"
                        android:background="@color/primary"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:id="@+id/singleArticleTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_weight="1"
                            android:text="@string/articleTitle"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/singleArticleText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            android:text="@string/artitleText"
                            android:textAppearance="?android:attr/textAppearanceMedium"/>

                    </RelativeLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

